user-test-intellegence/k8s/ctip-execution/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ctip-execution
  labels:
    ctip-managed: "true"
